# api-test-devops-portfolio

./: .cgcignore  .claudeignore  .codegraph  .coderabbit.yaml  .dockerignore  .env.examle  .env.example  .env.production.example  .env.staging.example  .env.testing.example  .gitignore  .gitleaks.toml  .markdown-link-check.json  .markdownlint.json  .markdownlintignore  .mcp.json  .mcp.json.bak  .pre-commit-config.yaml  .secrets.baseline  .textlintignore  .textlintrc  .trivyignore  AGENTS.md  ARCHITECTURAL_REVIEW_OBSIDIAN_V2.2.md  ARCHITECTURE_REVIEW_PYTEST_MARKERS.md  CHANGELOG.md  CLAUDE.md  CODE_QUALITY_ASSESSMENT_REPORT.md  CODE_REVIEW_GITHUB_CLIENT.md  CODE_REVIEW_WEEK6_ADJUSTMENT.md  CONTEXT.md  DECISION_TREE_LOGIC_REVIEW.yaml  Dockerfile  GEMINI.md  GITHUB_API_EVALUATION_SUMMARY.md  GITHUB_API_IMPLEMENTATION_GUIDE.md  GITHUB_API_INTEGRATION_EVALUATION.md  IMMEDIATE_FIX_OPTIONS.md  MEMORY.md  PROJECT_INDEX.md  (+33 more)
.claude/: CLAUDE.md
.claude-plugin/: plugin.json
.claude/agents/: code-quality-reviewer.md  code-simplicity-reviewer.md  documentation-accuracy-reviewer.md  performance-reviewer.md  security-code-reviewer.md  silent-failure-hunter.md  test-coverage-reviewer.md
.claude/commands/: code-review-excellence.md  comprehensive-pr-review.md  review-pr.md
.claude/steering/: product.md  structure.md  tech.md
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: dependabot.yml  renovate.json
.github/commands/: gemini-invoke.toml  gemini-plan-execute.toml  gemini-review.toml  gemini-scheduled-triage.toml  gemini-triage.toml
.github/workflows/: autoupdate-precommit.yml  ci.yml  claude-code-review.yml  claude.yml  dependabot-automerge.yml  docker-compose-test.yml  gemini-dispatch.yml  gemini-invoke.yml  gemini-plan-execute.yml  gemini-review.yml  gemini-scheduled-triage.yml  gemini-triage.yml  markdown-link-check.yml  sync-main-to-develop.yml
.omc/: project-memory.json
.serena/contexts/: limited_serena.yml
.serena/memories/: ai_collaboration_workflow.md  api-specification-check.md  auth_implementation_context.md  claude_flow_agents.md  command_usage_guide.md  execution-efficiency.md  fixture_quick_reference.md  implementation_quality_gates.md  improvement-checklist.md  learning_offset_maps.md  learning_triggers.md  mcp_selection_guide.md  mgrep_setup_guide.md  output_quality_standards.md  precompact_hook_analysis.md  project_architecture.md  project_file_structure.md  ralph_wiggum_analysis.md  sandbox_gh_cli_best_practices.md  sentry_integration.md  serena_memory_usage_guide.md  serena_tool_usage_patterns.md  terminology_standard.md  test_strategy_details.md  token_consumption_analysis.md  workflow_playbooks_guide.md
.sisyphus/run-continuation/: ses_1db69d4a7ffeIdtgODJ5oVo9kI.json
.spec-workflow/steering/: product.md  structure.md  tech.md
.taskmaster/: allowed_tasks.yml  state.json
.taskmaster/docs/: CLAUDE.md  portfolio_improvement_prd.txt
.taskmaster/schemas/: autoExecute.schema.json
.taskmaster/scripts/: line_notifier.py
.taskmaster/tasks/: tasks.json
.taskmaster/自動化統合/: 00_エグゼクティブサマリー.md  01_統合オプション比較.md  03_実装ガイド.md  05_自動実行システム設計.md  06_自動実行要件書.md  README.md
assets/: demo-cicd.cast  demo-test.cast
claudedocs/: research_superclaude_integration_20260127_205845.md
claudedocs/plans/: claude-rules-restructure-plan.md
config/: __init__.py  settings.py
docs/: AI_COLLABORATION_EFFICIENCY_ANALYSIS.md  CLAUDE_OPTIMIZATION_ANALYSIS_FINAL.md  CLAUDE_OPTIMIZATION_REPORT.md  CODE_QUALITY_ANALYSIS.md  COMPREHENSIVE_ANALYSIS_SYNTHESIS.md  DATA_CONSISTENCY_ANALYSIS_REPORT.md  DOCKER_DEVOPS_INTEGRATION_MASTER_PLAN.md  DOCS_INDEX.md  IMMEDIATE_ACTION_PLAN.md  PHASE1_final_document_improvement_masterplan.md  PROJECT_COMPLETION_REPORT.md  SECURITY_AGENT_COVERAGE_REVIEW.md  SECURITY_AUDIT_PYTEST_MARKERS.md  STRATEGIC_CONSOLIDATION_PLAN.md  _sidebar.md  ai_collaboration_demo.md  api_documentation_evaluation_report.md  ci-cd-assessment.md  claude-code-plugins-usage-guide.md  command_comparison_evidence.md  coverage_improvement_execution_report.md  coverage_improvement_strategy.md  index.md  knowledge_management_README.md  knowledge_management_dashboard.html  quality-gate-integration-summary.md  task master 自動化フロー組み込み計画.md  technical_reference_unified.md  terminology_standard.md  test_consolidation_implementation_guide.md  test_consolidation_quality_assurance_report.md  test_structure_analysis_report.md  text.md  unified_measurement_guide.md  プラットフォーム分類.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/ai_automated_execute/: 自動実行案.md
docs/ai_collaboration/: agent_introduction_plan.md  agent_strategy_production.md
docs/analysis/: ASSESSMENT_SUMMARY.md  IMPLEMENTATION_OPTIONS.md  PREDICTIVE_CODE_ANALYSIS.md  TECHNICAL_CONSTRAINTS_ANALYSIS_REPORT.md
docs/api/: api_documentation.md
docs/architecture/: UNIFIED_ARCHITECTURE_BLUEPRINT.md
docs/bk/: 8-10週ハイブリッドプラン_日次詳細学習スケジュール_20251003_114917.md  CLAUDE_20251003_131957.md  ポートフォリオ戦略分析.md  ポートフォリオ戦略分析_old.md  ポートフォリオ戦略分析_revise.md  学習・実装・記録フロー自動化要件.md
docs/compliance/: compliance_system_master.md
docs/dashboard/: index.html
docs/guides/: ccstatusline_introduction_guide.md  ci_cd_guide.md  claude-code-plugins-usage-guide.md  claude_squad_integration_guide.md  daily_commands.md  developer_experience_enhancement.md  docker_guide.md  owasp_compliance_checklist.md  staging_environment_guide.md  (+3 more)
models/: __init__.py  responses.py
prof/: combined.prof  test_concurrent_requests.prof
scripts/: apply_review_improvements.py  backup_vault.sh  daily_task_automation.sh  docker-build.sh  error_tracker.py  evaluate_4dimensions.py  generate_demo.sh  refactoring_proposal_get_week_from_day.py  scan_secrets.py  task_to_prompt_converter.py  update_day50.py  update_day51.py  update_day52.py  update_day53.py  update_day54.py  update_readme_metrics.py  verify_learning_plan_structure.py  week1_improvements.py  week_improver.py
tests/: conftest.py  constants.py  other.md  test_smoke.py  types.py
utils/: __init__.py  api_client.py  github_client.py  logger.py  logger.py,cover  sentry_init.py
(+307 files in other folders)
