[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils", "config"]

[project]
name = "api-test-devops-portfolio"
version = "0.1.0"
description = "APIテスト + DevOps 実践学習ポートフォリオ - 時給6000-8000円レベル到達を目指す統合学習プロジェクト"
authors = [
    {name = "Yuta", email = "yuta@example.com"},
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# 本番依存関係
dependencies = [
    "httpx>=0.27.0",           # 非同期HTTPクライアント
    "structlog>=23.1.0",       # 構造化ログ
    "pydantic>=2.0.0",         # データバリデーション
    "pydantic-settings>=2.0.0", # 設定管理
    "pytest",                   # テストフレームワーク
    "psutil>=6.1.1",            # システムメトリクス
    "pyyaml>=6.0",              # YAML設定ファイル読み込み
    "respx>=0.22.0",            # httpx用モックライブラリ
]

# 開発・テスト依存関係
[project.optional-dependencies]
dev = [
    # テストフレームワーク
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",   # 非同期テストサポート
    "pytest-mock>=3.12.0",      # モック機能
    "pytest-cov>=4.1.0",        # カバレッジ計測
    "pytest-xdist>=3.5.0",      # 並列テスト実行
    
    # 品質管理ツール
    "ruff>=0.1.0",               # 統合リンター・フォーマッター (black, isort, flake8統合)
    "mypy>=1.8.0",               # 型チェッカー
    "bandit>=1.7.5",             # セキュリティスキャン
    "safety>=3.0.0",             # 脆弱性チェック
    
    # 開発サポート
    "ipython>=8.10.0",           # 対話型Python
    "jupyter>=1.0.0",            # Notebook環境
    "pre-commit>=3.6.0",         # Git hooks
]

[project.urls]
Homepage = "https://github.com/yourusername/api-test-devops-portfolio"
Repository = "https://github.com/yourusername/api-test-devops-portfolio"
Documentation = "https://yourusername.github.io/api-test-devops-portfolio"
Issues = "https://github.com/yourusername/api-test-devops-portfolio/issues"

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "detect-secrets>=1.5.0",
    "pre-commit>=4.3.0",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.1.0",
    "safety>=3.6.0",
]
# pytest設定
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",                       # すべての結果を表示
    "--strict-markers",          # 未定義マーカーでエラー
    "--strict-config",           # 設定エラーで停止
    "--ignore=tests/unit/test_error_tracker.py",  # pytest.iniから移行
    "--cov",                     # カバレッジ対象: [tool.coverage.run].source参照
    "--cov-report=term-missing", # 欠損行表示
    "--cov-report=html:reports/htmlcov",  # HTMLレポート
    "--cov-report=xml:reports/coverage.xml",  # XMLレポート
    "--cov-report=json",
    "-v",
    "--cov-fail-under=65",       # ローカル目標: 85%（CI: 65%→85%段階的上昇）
]
markers = [
    "unit: 単体テスト",
    "integration: 統合テスト",
    "e2e: E2Eテスト",
    "performance: パフォーマンステスト",
    "security: セキュリティテスト",
    "slow: 実行時間の長いテスト",
    "external: 外部API依存テスト（週次CI実行、Rate Limit考慮）",
    "smoke: スモークテスト（6週プランで実装予定）",
    "regression: 回帰テスト（クリティカルパス検証）",
]
asyncio_mode = "auto"            # 非同期テスト自動検出

# カバレッジ設定
[tool.coverage.run]
source = ["utils", "config", "models"]  # Coverage対象: 3モジュール
omit = [
    "tests/*",
    "venv/*",
    "*.egg",
    ".tox/*",
    "build/*",
    "docs/*",
    "*/__init__.py"
]
branch = true                    # ブランチカバレッジも計測

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\:",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

# Ruff設定（統合リンター・フォーマッター）
[tool.ruff]
target-version = "py312"
line-length = 100  # DevOps軽量化: コミット時の厳密度緩和
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "C90",  # mccabe complexity
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "PTH",  # flake8-use-pathlib
]
ignore = [
    "S101",  # Use of assert detected
    "S603",  # subprocess-without-shell-equals-true
    "B008",  # Do not perform function calls in argument defaults
]
unfixable = ["F841"]  # unused variables

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D"]  # Allow assert in tests, ignore docstring rules

[tool.ruff.lint.isort]
known-first-party = ["utils", "config", "tests"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

# mypy設定（型チェック）
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# bandit設定（セキュリティスキャン）
[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B601"]  # assertとshell使用の警告を除外
