[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils", "config", "models"]

[project]
name = "api-test-devops-portfolio"
version = "0.1.0"
description = "APIテスト + DevOps 実践学習ポートフォリオ - 時給6000-8000円レベル到達を目指す統合学習プロジェクト"
authors = [
    {name = "Yuta", email = "yuta@example.com"},
]
readme = "README.md"
requires-python = "==3.14.*"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# 本番依存関係
dependencies = [
    "httpx>=0.27.0",                # 非同期HTTPクライアント
    "structlog>=23.1.0",            # 構造化ログ
    "pydantic[email]>=2.13.4",      # データバリデーション
    "pydantic-settings>=2.14.1",     # 設定管理
    "psutil>=6.1.1",                # システムメトリクス
    "pyyaml>=6.0",                  # YAML設定ファイル読み込み
    "sentry-sdk[httpx]>=2.59.0,<3.0.0", # エラー監視（httpx統合）
]

[project.urls]
Homepage = "https://github.com/yourusername/api-test-devops-portfolio"
Repository = "https://github.com/yourusername/api-test-devops-portfolio"
Documentation = "https://yourusername.github.io/api-test-devops-portfolio"
Issues = "https://github.com/yourusername/api-test-devops-portfolio/issues"

[dependency-groups]
dev = [
    # テスト
    "pytest>=9.0.3",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "respx>=0.23.1",            # httpx用モックライブラリ
    "socksio>=1.0.0",           # SOCKS5 proxy support for httpx
    # 品質管理
    "ruff>=0.15.12,<0.16",       # pre-commit frozen: v0.15.11（.pre-commit-config.yaml参照）
    "mypy>=2.0.0,<3.0.0",
    "bandit>=1.8.6",
    "safety>=3.6.0",
    # 開発サポート
    "pre-commit>=4.6.0",
]
# pytest設定
[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",                        # verbose出力（CI/CD向け）
    "-ra",                       # すべての結果を表示
    "--strict-markers",          # 未定義マーカーでエラー
    "--strict-config",           # 設定エラーで停止
    "--ignore=tests/unit/test_error_tracker.py",  # pytest.iniから移行
    "--cov",                     # カバレッジ対象: [tool.coverage.run].source参照
    "--cov-report=term-missing", # 欠損行表示
    "--cov-report=html:reports/htmlcov",  # HTMLレポート
    "--cov-report=xml:reports/coverage.xml",  # XMLレポート
    "--cov-fail-under=85",       # ローカル/CI目標: 85%(unit, integration)
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (external dependencies)",
    "e2e: End-to-end tests (full user scenarios)",
    "performance: Performance tests (latency/throughput)",
    "slow: Slow tests (>3s, excluded from local dev)",
    "external: External API tests (weekly CI only)",
    "smoke: Smoke tests (basic functionality)",
]
asyncio_mode = "auto"            # 非同期テスト自動検出

# カバレッジ設定
[tool.coverage.run]
source = ["utils", "config", "models"]  # Coverage対象: 3モジュール
omit = [
    "tests/*",
    "venv/*",
    "*.egg",
    ".tox/*",
    "build/*",
    "docs/*",
    "*/__init__.py",
]
branch = true                    # ブランチカバレッジも計測

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\(.*Protocol.*\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

# Ruff設定（統合リンター・フォーマッター）
[tool.ruff]
target-version = "py314"
line-length = 100  # DevOps軽量化: コミット時の厳密度緩和
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "C90",  # mccabe complexity
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "PTH",  # flake8-use-pathlib
]
ignore = [
    "S101",  # Use of assert detected
    "S603",  # subprocess-without-shell-equals-true
    "B008",  # Do not perform function calls in argument defaults
]
unfixable = ["F841"]  # unused variables

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D"]  # Allow assert in tests, ignore docstring rules

[tool.ruff.lint.isort]
known-first-party = ["utils", "config", "tests"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

# mypy設定（型チェック）
[tool.mypy]
python_version = "3.14"
plugins = ["pydantic.mypy"]
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "utils.api_client"
warn_return_any = false  # _safe_parse_json()がAnyを返すのは設計上妥当（JSONパースは実行時まで型不明）

# bandit設定（セキュリティスキャン）
[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B601"]  # assertとshell使用の警告を除外
